# radio-modulation-validator

./: .gitignore  README.md  checksums.sha256  pyproject.toml
docs/: contributing_iq_samples.md  contributing_plugins.md  dataset_preparation.md  npu-deployment.md  validation_methodology.md
iq_samples/: README.md
models/: README.md  family_classifier.meta.json  family_classifier.onnx  family_classifier_int8.onnx  order_classifier.meta.json  order_classifier.onnx  order_classifier_int8.onnx
scripts/: check_env.py
src/rmv/: __init__.py  api.py  checksum_util.py  classifier.py  cli.py  constants.py  export.py  export_npu.py  export_quantised.py  iq_io.py  model.py  models_paths.py  train.py  types.py  validate.py  verify_checkpoint.py
src/rmv/dataset/: __init__.py  checksums.py  cli.py  cspb_detect.py  download.py  info.py  loader.py  manage.py  manifest.py  paths.py  preprocess.py  radioml_resolve.py  synthetic.py
src/rmv/plugins/: __init__.py  base.py  cli.py  registry.py  sleipnir_8qpsk.py
src/rmv/scan/: __init__.py  backend.py  class_vocab.py  cli.py  config.py  database.py  discover.py  exclusions.py  gr_env.py  iq_generator.py  mode_table.py  paths.py  pipeline.py  prompts.py  readme_parser.py  report_writer.py  runner.py
tests/: test_api.py  test_classifier.py  test_cli.py  test_constants.py  test_dataset.py  test_loader.py  test_plugins.py  test_preprocess_cache.py  test_quantisation.py  test_scan.py  test_synthetic.py  test_train.py  test_validate.py  test_verify_checkpoint.py
tests/fixtures/: synthetic_iq.py
